[package]
name = "discord-socket-rs"
version = "0.1.0"
authors = ["raizo <groebner.loron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.12.0"
serde_json = "1.0.61"
serde = {version="1.0.123", features=["derive"]}
uuid = {version="0.8.2", features=["v4", "serde"]}